# cobs

./: .gitignore  CMakeLists.txt
UI/: obs-app.cpp
cmake/Modules/: FindLibWebRTC.cmake
plugins/: CMakeLists.txt
plugins/obs-ffmpeg/: jim-nvenc.c
plugins/obs-rtc/: CMakeLists.txt  crtc.c  crtc.h  crtc_player.c  crtc_pusher.c  plugin-main.c  window-helpers.c
plugins/obs-rtc/data/locale/: zh-CN.ini
plugins/obs-rtc/rtc/: CMakeLists.txt  Robot.cpp  Robot.h  Utils.hpp  capture.cpp  capture.h  ccapturer_tracksource.cpp  ccapturer_tracksource.h  ccfg.cpp  ccfg.h  cclient.cpp  cclient.h  cconfig.cpp  cconfig.h  cdevice.cpp  cmediasoup_mgr.cpp  cmsg_dispatch.cpp  cmsg_dispatch.h  crtc_client.cpp  crtc_client.h  crtc_mgr.cpp  crtc_mgr.h  crtc_player.cpp  crtc_transport.cpp  crtc_transport.h  csend_transport.cpp  ctransport.cpp  ctransport.h  cvideo_render.cpp  cvideo_render.h  cwebsocket_mgr.cpp  dc-capture.h  desktop_capture_source.h  ortc.cpp  ortc.hpp  plugin-main.c  scalabilityMode.cpp  scalabilityMode.hpp
plugins/obs-rtc/rtc/sdp/: MediaSection.cpp  MediaSection.hpp  RemoteSdp.cpp  RemoteSdp.hpp  Utils.cpp  Utils.hpp
plugins/obs-rtc_player/: CMakeLists.txt  capture.cpp  capture.h  crtc.c  crtc_player.c  plugin-main.c
plugins/obs-rtc_player/data/locale/: zh-CN.ini
plugins/obs-rtc_pusher/: CMakeLists.txt  capture.cpp  capture.h  casync_log.cpp  ccapturer_tracksource.cpp  ccfg.cpp  cclient.cpp  cclient.h  cdevice.cpp  cmediasoup_mgr.cpp  cmediasoup_mgr.h  crtc.c  crtc_pusher.c  crtc_pusher.h  dc-capture.c  desktop_capture_source.cpp  ortc.cpp  plugin-main.c  window-helpers.c
plugins/obs-rtc_pusher/data/locale/: zh-CN.ini
plugins/rtc/: CMakeLists.txt  crtc.c
plugins/rtc/data/locale/: zh-CN.ini
